// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypegooseCoreModule forAsyncRoot different types useFactory injects the factory's async options into DEFAULT_DB_CONNECTION_NAME 1`] = `
Array [
  Object {
    "inject": Array [
      "CONFIG_SERVICE",
    ],
    "provide": "TypegooseModuleOptions",
    "useFactory": [MockFunction],
  },
  Object {
    "inject": Array [
      "TypegooseModuleOptions",
    ],
    "provide": "DefaultTypegooseConnection",
    "useFactory": [Function],
  },
  Object {
    "provide": "TypegooseConnectionName",
    "useValue": "DefaultTypegooseConnection",
  },
]
`;

exports[`TypegooseCoreModule forAsyncRoot different types useFactory injects the factory's async options into DEFAULT_DB_CONNECTION_NAME 2`] = `
Array [
  Object {
    "inject": Array [
      "TypegooseModuleOptions",
    ],
    "provide": "DefaultTypegooseConnection",
    "useFactory": [Function],
  },
]
`;